# bsaber-hash-decoder

./: get-favorites.py  pyproject.toml
