[tool.poetry]
name = "bsaber-favorites"
version = "0.1.0"
description = ""
authors = ["re76 <rernst76@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
pylint = "^2.12.2"
black = "^21.12b0"
ipython = "^7.30.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
